# $Id$

2006-12-24	Konstantin V. Arkhipov

	* main/Containers/Unified/: all pointer-methods are now static too.

	* main/DAOs/InformedDAO.class.php: support interface for DAO's
	pointer-methods, which are now static: getObjectName, getTable,
	getSequence and getIdName.

	* main/DAOs/GenericDAO.class.php, main/DAOs/StorableDAO.class.php:
	getFields() dropped in favour of getMapping().

	* core/Base/Enumeration.class.php: changeId() renamed to setId(),
	constructor is final now, should help during migration.

	* core/Base/IdentifiableObject.class.php: getId/setId are not longer
	final.

2006-12-22	Konstantin V. Arkhipov

	* core/Form/Filters/RussianTypograph.class.php: hi, Tema.

2006-12-21	Konstantin V. Arkhipov

	* main/DAOs/GenericDAO.class.php: drop() added.

	* main/DAOs/StorableDAO.class.php: import() added.

	* core/Base/Date.class.php: now implements DialectString, so you can
	use Date/Timestamp in OSQL-related logic.

2006-12-20	Konstantin V. Arkhipov

	* main/Flow/RedirectView.class.php: now skips arrays and objects in
	query string generation.

2006-12-19	Konstantin V. Arkhipov

	* main/Utils/TextUtils.class.php: famous upFirst() method added.

2006-12-17	Konstantin V. Arkhipov

	* ext/main/: DAOConnected, FullTextDAO and ViewResolver interfaces
	added.

	* core/Base/Enumeration.class.php: synced with php version.

	* core/Form/Primitives/PrimitiveDumper.class.php: removed.

	* core/DB/: asyncQuery()/isBusy() dropped; queueSuppored and
	supportSequences() renamed to hasQueue() and hasSequences().

	* core/Criteria/Criteria.class.php: limit/offset support added.

2006-12-11	Konstantin V. Arkhipov

	* meta/: lazy one-to-one relation implemented.

2006-12-05	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveFile.class.php: copyToPath() added.

	* main/Flow/MonolithicController.class.php: hooks-based editor
	implemented.

	* core/Form/Primitives/: Timestamp' stuff separated from
	PrimitiveDate; this one breaks BC: you must replace all