@@ -3,6 +3,5 @@
 * fix OrderBy: logical expressions, queries, etc; (antony?)
 * store serialized MetaClass in Proto's (?); (voxus)
 * implement multiGet @ CachePeer's (?); (voxus)
-* dot-style property names mapping for Criteria;
 * fetch strategy for Criteria;
 * dao for value objects (Range and other without table);
