@@ -65,9 +65,86 @@
 		{
 			if ($atom instanceof Property)
 				return $this->mapProperty($atom, $query);
-			elseif (is_string($atom) && array_key_exists($atom, $this->mapping))
-				return $this->mapProperty(new Property($atom), $query);
-			elseif ($atom instanceof LogicalObject)
+			elseif (is_string($atom)) {
+				if (strpos($atom, '.') !== false) {
+					$path = explode('.', $atom);
+					
+					$property = $path[0];
+					unset($path[0]);
+					
+					$className = $this->getClassFor($property);
+					
+					if (is_array($className)) { // container
+						$containerName = $className[0];
+						$objectName = $className[1];
+						
+						$table =
+							call_user_func(
+								array($containerName, 'getHelperTable')
+							);
+						
+						$dao = call_user_func(array($objectName, 'dao'));
+						
+						$query->
+							join(
+								$table,
+								
+								Expression::eq(
+									DBField::create(
+										$this->getIdName(),
+										$this->getTable()
+									),
+									
+									DBField::create(
+										call_user_func(
+											array($containerName, 'getParentIdField')
+										),
+										$table
+									)
+								)
+							)->
+							join(
+								$dao->getTable(),
+								
+								Expression::eq(
+									DBField::create(
+										$dao->getIdName(),
+										$dao->getTable()
+									),
+									
+									DBField::create(
+										call_user_func(
+											array($containerName, 'getChildIdField')
+										),
+										$table
+									)
+								)
+							);
+					} else {
+						$dao = call_user_func(array($className, 'dao'));
+						
+						$query->
+							join(
+								$dao->getTable(),
+								
+								Expression::eq(
+									DBField::create(
+										$this->getFieldFor($property),
+										$this->getTable()
+									),
+									
+									DBField::create(
+										$dao->getIdName(),
+										$dao->getTable()
+									)
+								)
+							);
+					}
+					
+					return $dao->guessAtom(implode('.', $path), $query);
+				} elseif (array_key_exists($atom, $this->mapping))
+					return $this->mapProperty(new Property($atom), $query);
+			} elseif ($atom instanceof LogicalObject)
 				return $atom->toMapped($this, $query);
 			elseif ($atom instanceof DBValue)
 				return $atom;
@@ -86,10 +163,10 @@
 				)
 			);
 			
-			if (!$this->mapping[$name])
-				return $name;
+			if ($this->mapping[$name] === null)
+				return new DBField($name, $this->getTable());
 			
-			return $this->mapping[$name];
+			return new DBField($this->mapping[$name], $this->getTable());
 		}
 
 		protected function inject(
